[gd_scene load_steps=2 format=3 uid="uid://dh6e8y0nlrbwq"]

[ext_resource type="Script" uid="uid://jh2dj65vdoir" path="res://tools/helpers/day_panel/day_panel.gd" id="1_np6xq"]

[node name="DayPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_np6xq")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
color = Color(0.05882353, 0.05882353, 0.28235295, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="DayNum" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Day - 25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Challenge1" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Challenge 1"

[node name="Challenge2" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Challenge 2"

[node name="TestMode" type="CheckButton" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Test Mode - Disabled"
alignment = 1

[node name="TextEdit" type="TextEdit" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Status: Awaiting challenge execution"
wrap_mode = 1

[node name="Reset" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Reset"

[node name="BacktoMenu" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back to Menu"
